--- a/src/index.css
+++ b/src/index.css
@@ -24,14 +24,6 @@ body {
     font-family: 'Inter', system-ui, sans-serif;
   }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 /* body {
   display: flex;
@@ -47,16 +39,13 @@ h1 {
 }
 
 button {
-  padding: 0.6em 1.2em;
+  /* padding: 0.6em 1.2em; */
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #E63946;
 }
 /* button:focus,
 button:focus-visible {
@@ -67,8 +56,5 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
   }
 }
